pushing all slots

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,7 +1,7 @@
 - stage: Main Stage
   items:
     - time: "08:00"
-      title: "Abertura dos portoes/Credenciamento"
+      title: "Credenciamento"
     - time: "09:20"
       title: "Cerimonia de abertura"
     - time: "09:30 - 10:10"
@@ -12,12 +12,28 @@
       title: "TBD"
       speaker: "Filipi Pires"
       speaker_url: "/speakers/filipi-pires.html"
+    - time: "11:00 - 11:50"
+      title: "O que detona sua investigação digital?"
+      speaker: "Emerson Wendt"
+      speaker_url: "/speakers/emerson-wendt.html"      
     - time: "11:50 - 12:40"
       title: "TBD"
+      speaker: ""
+      speaker_url: ""
     - time: "12:40 - 14:00"
       title: "Lunch Break"
     - time: "14:00 - 14:50"
       title: "TBD"
+      speaker: ""
+      speaker_url: ""
+    - time: "14:50 - 15:40"
+      title: "TBD"
+      speaker: ""
+      speaker_url: ""
+    - time: "15:40 - 16:30"
+      title: "TBD"
+      speaker: ""
+      speaker_url: ""
     - time: "16:30 - 17:20"
       title: "TBD"
       speaker: "Nelson Brito"
@@ -79,6 +95,16 @@
       title: "A linguagem C - Como falar para que os C-levels nos entendam"
       speaker: "Dayane Zimmerer"
       speaker_url: "/speakers/dayane-zimmerer.html"
+    - time: "14:50 - 15:40"
+      title: "TBD"
+      speaker: "TBD"
+      speaker_url: "/speakers/"
+    - time: "15:40 - 16:30"
+      title: "TBD"
+      speaker: "TBD"
+      speaker_url: "/speakers/"
+    - time: "16:30"
+      title: "Palco Fechado"
 - stage: Village CISO
   items:
     - time: "08:00"
@@ -86,27 +112,29 @@
     - time: "09:20"
       title: "Palco Fechado"
     - time: "09:30 - 10:10"
-      title: ""
-      speaker: ""
+      title: "TBD"
+      speaker: "TBD"
       speaker_url: "/speakers/"
     - time: "10:10 - 11:00"
-      title: ""
-      speaker: ""
+      title: "TBD"
+      speaker: "TBD"
       speaker_url: "/speakers/"
     - time: "11:50 - 12:40"
-      title: ""
-      speaker: ""
+      title: "TBD"
+      speaker: "TBD"
       speaker_url: "/speakers/"
     - time: "12:40 - 14:00"
       title: "Lunch Break"
     - time: "16:30"
     - time: "14:00 - 14:50"
-      title: ""
-      speaker: ""
+      title: "TBD"
+      speaker: "TBD"
       speaker_url: "/speakers"
     - time: "14:50 - 15:40"
       title: "TBD"
+      speaker: "TBD"
     - time: "15:40 - 16:30"
       title: "TBD"
+      speaker: "TBD"
     - time: "16:30"
       title: "Palco Fechado"
