--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -9,7 +9,7 @@
       speaker: "Oliveira Lima"
       speaker_url: "/speakers/oliveira-lima.html"
     - time: "10:10 - 11:00"
-      title: "TBD"
+      title: "Weaponizing PDF Files: Advanced Exploitation Techniques for Red Teams"
       speaker: "Filipi Pires"
       speaker_url: "/speakers/filipi-pires.html"
     - time: "11:00 - 11:50"
@@ -60,13 +60,13 @@
       speaker_url: "/speakers/romulo-rocha.html"
     - time: "12:40 - 14:00"
       title: "Lunch Break"
-    - time: "16:30"
     - time: "14:00 - 14:50"
       title: "Pipeline seguro para modelos de IA"
       speaker: "Michelle Mesquita"
       speaker_url: "/speakers/michelle-mesquita.html"
     - time: "14:50 - 15:40"
-      title: "TBD"
+      title: "Linux Rootkits: an introduction to LKM"
+      speaker: "Diego Berger Tellaroli"
     - time: "15:40 - 16:30"
       title: "TBD"
     - time: "16:30"
