--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -27,9 +27,9 @@
       speaker: ""
       speaker_url: ""
     - time: "14:50 - 15:40"
-      title: "TBD"
-      speaker: ""
-      speaker_url: ""
+      title: "Dome: Secure Web Gateway com Lua no kernel"
+      speaker: "Lourival Vieira Neto"
+      speaker_url: "/speakers/lourival-vieira-neto.html"
     - time: "15:40 - 16:30"
       title: "TBD"
       speaker: ""
