Rename stage 'Village WOMCY' to 'Women Village'

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -72,7 +72,7 @@
       title: "TBD"
     - time: "16:30"
       title: "Palco Fechado"
-- stage: Village WOMCY
+- stage: Women Village
   items:
     - time: "08:00"
       title: "Palco Fechado"
