--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -97,12 +97,10 @@
       speaker: "Dayane Zimmerer"
       speaker_url: "/speakers/dayane-zimmerer.html"
     - time: "14:50 - 15:40"
-      title: "TBD"
-      speaker: "TBD"
-      speaker_url: "/speakers/"
+      title: "Palco Fechado"
     - time: "15:40 - 16:30"
-      title: "TBD"
-      speaker: "TBD"
-      speaker_url: "/speakers/"
+      title: "Palco Fechado"
     - time: "16:30"
+      title: "Palco Fechado"
+    - time: "17:20"
       title: "Palco Fechado"
