--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -5,13 +5,13 @@
     - time: "09:20"
       title: "Cerimonia de abertura"
     - time: "09:30 - 10:10"
-      title: "OPSEC for Red Teams - Operações Clandestinas Autorizadas"
-      speaker: "Oliveira Lima"
-      speaker_url: "/speakers/oliveira-lima.html"
-    - time: "10:10 - 11:00"
       title: "Weaponizing PDF Files: Advanced Exploitation Techniques for Red Teams"
       speaker: "Filipi Pires"
       speaker_url: "/speakers/filipi-pires.html"
+    - time: "10:10 - 11:00"
+      title: "OPSEC for Red Teams - Operações Clandestinas Autorizadas"
+      speaker: "Oliveira Lima"
+      speaker_url: "/speakers/oliveira-lima.html"
     - time: "11:00 - 11:50"
       title: "O que detona sua investigação digital?"
       speaker: "Emerson Wendt"
@@ -35,7 +35,7 @@
       speaker: ""
       speaker_url: ""
     - time: "16:30 - 17:20"
-      title: "TBD"
+      title: "The Big Bang Theory"
       speaker: "Nelson Brito"
       speaker_url: "/speakers/nelson-brito.html"
     - time: "17:20"
