--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -17,15 +17,15 @@
       speaker: "Emerson Wendt"
       speaker_url: "/speakers/emerson-wendt.html"      
     - time: "11:50 - 12:40"
-      title: "TBD"
-      speaker: ""
-      speaker_url: ""
+      title: "Rastreamento de Metadados: a Inteligência Escondida em Arquivos Simples"
+      speaker: "Eduardo Arcos"
+      speaker_url: "/speakers/eduardo-arcos.html"
     - time: "12:40 - 14:00"
       title: "Lunch Break"
     - time: "14:00 - 14:50"
-      title: "TBD"
-      speaker: ""
-      speaker_url: ""
+      title: "De 0 ao SOC: A curva real que ninguém ensina (e por que isso importa)"
+      speaker: "Kizzy Macedo Benjamin"
+      speaker_url: "/speakers/kizzy-macedo.html"
     - time: "14:50 - 15:40"
       title: "Dome: Secure Web Gateway com Lua no kernel"
       speaker: "Lourival Vieira Neto"
@@ -47,9 +47,9 @@
     - time: "09:20"
       title: "Palco Fechado"
     - time: "09:30 - 10:10"
-      title: "De 0 ao SOC: A curva real que ninguém ensina (e por que isso importa)"
-      speaker: "Kizzy Macedo Benjamin"
-      speaker_url: "/speakers/kizzy-macedo.html"
+      title: "Sobrevivendo ao ransomware: existe vida após o ataque"
+      speaker: "Felipe Pessanha"
+      speaker_url: "/speakers/felipe-pessanha.html"
     - time: "10:10 - 11:00"
       title: "Android Game Hacking"
       speaker: "Abid Lohan"
