--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -31,9 +31,9 @@
       speaker: "Lourival Vieira Neto"
       speaker_url: "/speakers/lourival-vieira-neto.html"
     - time: "15:40 - 16:30"
-      title: "TBD"
-      speaker: ""
-      speaker_url: ""
+      title: "Android Game Hacking"
+      speaker: "Abid Lohan"
+      speaker_url: "/speakers/abid-lohan.html"
     - time: "16:30 - 17:20"
       title: "The Big Bang Theory"
       speaker: "Nelson Brito"
@@ -51,9 +51,9 @@
       speaker: "Felipe Pessanha"
       speaker_url: "/speakers/felipe-pessanha.html"
     - time: "10:10 - 11:00"
-      title: "Android Game Hacking"
-      speaker: "Abid Lohan"
-      speaker_url: "/speakers/abid-lohan.html"
+      title: "The Dark Side of SEO:  How Adversaries Hijack Search Results"
+      speaker: "Eric Fraga"
+      speaker_url: "/speakers/eric-fraga.html"
     - time: "11:50 - 12:40"
       title: "O primeiro dia de um agente de IA no SOC"
       speaker: "Rômulo Rocha"
