--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -54,6 +54,10 @@
       title: "The Dark Side of SEO:  How Adversaries Hijack Search Results"
       speaker: "Eric Fraga"
       speaker_url: "/speakers/eric-fraga.html"
+    - time: "11:00 - 11:50"
+      title: "TBD"
+      speaker: "TBD"
+      speaker_url: "/speakers/"
     - time: "11:50 - 12:40"
       title: "O primeiro dia de um agente de IA no SOC"
       speaker: "Rômulo Rocha"
