fixing portuguese issues

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -1,15 +1,15 @@
-- stage: Main Stage
+- stage: Palco principal
   items:
     - time: "08:00"
       title: "Credenciamento"
     - time: "09:20"
-      title: "Cerimonia de abertura"
+      title: "Cerimônia de abertura"
     - time: "09:30 - 10:10"
-      title: "Weaponizing PDF Files: Advanced Exploitation Techniques for Red Teams"
+      title: "Weaponizing PDF files: advanced exploitation techniques for red teams"
       speaker: "Filipi Pires"
       speaker_url: "/speakers/filipi-pires.html"
     - time: "10:10 - 11:00"
-      title: "OPSEC for Red Teams - Operações Clandestinas Autorizadas"
+      title: "OPSEC for red teams - operações clandestinas autorizadas"
       speaker: "Oliveira Lima"
       speaker_url: "/speakers/oliveira-lima.html"
     - time: "11:00 - 11:50"
@@ -17,21 +17,21 @@
       speaker: "Emerson Wendt"
       speaker_url: "/speakers/emerson-wendt.html"      
     - time: "11:50 - 12:40"
-      title: "Rastreamento de Metadados: a Inteligência Escondida em Arquivos Simples"
+      title: "Rastreamento de metadados: a inteligência escondida em arquivos simples"
       speaker: "Eduardo Arcos"
       speaker_url: "/speakers/eduardo-arcos.html"
     - time: "12:40 - 14:00"
-      title: "Lunch Break"
+      title: "Intervalo para almoço"
     - time: "14:00 - 14:50"
-      title: "De 0 ao SOC: A curva real que ninguém ensina (e por que isso importa)"
+      title: "De 0 ao SOC: a curva real que ninguém ensina (e por que isso importa)"
       speaker: "Kizzy Macedo Benjamin"
       speaker_url: "/speakers/kizzy-macedo.html"
     - time: "14:50 - 15:40"
-      title: "Dome: Secure Web Gateway com Lua no kernel"
+      title: "Dome: secure web gateway com Lua no kernel"
       speaker: "Lourival Vieira Neto"
       speaker_url: "/speakers/lourival-vieira-neto.html"
     - time: "15:40 - 16:30"
-      title: "Android Game Hacking"
+      title: "Android game hacking"
       speaker: "Abid Lohan"
       speaker_url: "/speakers/abid-lohan.html"
     - time: "16:30 - 17:20"
@@ -39,19 +39,19 @@
       speaker: "Nelson Brito"
       speaker_url: "/speakers/nelson-brito.html"
     - time: "17:20"
-      title: "Sorteios e Cerimonia de Encerramento"
-- stage: Secondary Stage
+      title: "Sorteios e cerimônia de encerramento"
+- stage: Palco secundário
   items:
     - time: "08:00"
-      title: "Palco Fechado"
+      title: "Palco fechado"
     - time: "09:20"
-      title: "Palco Fechado"
+      title: "Palco fechado"
     - time: "09:30 - 10:10"
       title: "Sobrevivendo ao ransomware: existe vida após o ataque"
       speaker: "Felipe Pessanha"
       speaker_url: "/speakers/felipe-pessanha.html"
     - time: "10:10 - 11:00"
-      title: "The Dark Side of SEO:  How Adversaries Hijack Search Results"
+      title: "The dark side of SEO: how adversaries hijack search results"
       speaker: "Eric Fraga"
       speaker_url: "/speakers/eric-fraga.html"
     - time: "11:00 - 11:50"
@@ -63,50 +63,50 @@
       speaker: "Rômulo Rocha"
       speaker_url: "/speakers/romulo-rocha.html"
     - time: "12:40 - 14:00"
-      title: "Lunch Break"
+      title: "Intervalo para almoço"
     - time: "14:00 - 14:50"
       title: "Pipeline seguro para modelos de IA"
       speaker: "Michelle Mesquita"
       speaker_url: "/speakers/michelle-mesquita.html"
     - time: "14:50 - 15:40"
-      title: "Linux Rootkits: an introduction to LKM"
+      title: "Linux rootkits: an introduction to LKM"
       speaker: "Diego Berger Tellaroli"
       speaker_url: "/speakers/diego-tellaroli.html"
     - time: "15:40 - 16:30"
-      title: "SOC & CTI Inteligente: Alinhando Operações de Segurança às Leis, Normas, Frameworks e Boas Práticas Globais"
+      title: "SOC & CTI inteligente: alinhando operações de segurança às leis, normas, frameworks e boas práticas globais"
       speaker: "Cristiano Soraggi"
       speaker_url: "/speakers/cristiano-soraggi.html" 
     - time: "16:30"
-      title: "Palco Fechado"
-- stage: Women Village
+      title: "Palco fechado"
+- stage: Palco Women Village
   items:
     - time: "08:00"
-      title: "Palco Fechado"
+      title: "Palco fechado"
     - time: "09:20"
-      title: "Palco Fechado"
+      title: "Palco fechado"
     - time: "09:30 - 10:10"
-      title: "Ctrl+Alt+Traição: do Dev ao vilão corporativo (insider)"
+      title: "Ctrl+Alt+Traição: do dev ao vilão corporativo (insider)"
       speaker: "Claudia Carvalho"
       speaker_url: "/speakers/claudia-carvalho.html"
     - time: "10:10 - 11:00"
-      title: "Metodo para escolher a melhor vaga em concursos publicos, em seguranca da informacao, para diferentes perfis"
+      title: "Método para escolher a melhor vaga em concursos públicos, em segurança da informação, para diferentes perfis"
       speaker: "Christiana Couto"
       speaker_url: "/speakers/christiana-couto.html"
     - time: "11:50 - 12:40"
-      title: "Muito Alem do Deploy: Propriedade Intelectual como Camada de Seguranca"
+      title: "Muito além do deploy: propriedade intelectual como camada de segurança"
       speaker: "Vanessa Gallo"
       speaker_url: "/speakers/vanessa-gallo.html"
     - time: "12:40 - 14:00"
-      title: "Lunch Break"
+      title: "Intervalo para almoço"
     - time: "14:00 - 14:50"
-      title: "A linguagem C - Como falar para que os C-levels nos entendam"
+      title: "A linguagem C - como falar para que os C-levels nos entendam"
       speaker: "Dayane Zimmerer"
       speaker_url: "/speakers/dayane-zimmerer.html"
     - time: "14:50 - 15:40"
-      title: "Palco Fechado"
+      title: "Palco fechado"
     - time: "15:40 - 16:30"
-      title: "Palco Fechado"
+      title: "Palco fechado"
     - time: "16:30"
-      title: "Palco Fechado"
+      title: "Palco fechado"
     - time: "17:20"
-      title: "Palco Fechado"
+      title: "Palco fechado"
