Add Cristiane Cavalcanti speaker profile and Women Village slot

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -103,7 +103,9 @@
       speaker: "Dayane Zimmerer"
       speaker_url: "/speakers/dayane-zimmerer.html"
     - time: "14:50 - 15:40"
-      title: "Palco fechado"
+      title: "Privacidade como Padrão: Como Ameaças, Vulnerabilidades e Proteção de Dados se Conectam"
+      speaker: "Cristiane Cavalcanti"
+      speaker_url: "/speakers/cristiane-cavalcanti.html"
     - time: "15:40 - 16:30"
       title: "Palco fechado"
     - time: "16:30"
