Adiciona suporte a duas talks no perfil da Christiana

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -55,9 +55,9 @@
       speaker: "Eric Fraga"
       speaker_url: "/speakers/eric-fraga.html"
     - time: "11:00 - 11:50"
-      title: "TBD"
-      speaker: "TBD"
-      speaker_url: "/speakers/"
+      title: "Método para escolher a melhor vaga em concursos públicos, em segurança da informação, para diferentes perfis"
+      speaker: "Christiana Couto"
+      speaker_url: "/speakers/christiana-couto.html"
     - time: "11:50 - 12:40"
       title: "O primeiro dia de um agente de IA no SOC"
       speaker: "Rômulo Rocha"
@@ -89,7 +89,7 @@
       speaker: "Claudia Carvalho"
       speaker_url: "/speakers/claudia-carvalho.html"
     - time: "10:10 - 11:00"
-      title: "Método para escolher a melhor vaga em concursos públicos, em segurança da informação, para diferentes perfis"
+      title: "De mãe para filha: a historia da minha trajetória profissional na área de segurança da informação"
       speaker: "Christiana Couto"
       speaker_url: "/speakers/christiana-couto.html"
     - time: "11:50 - 12:40"
